# housebroken

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: README.md  demo.tape  format-notes.md  v2-auto-run.md
fixtures/: build_fixture.py  synthetic_rules.md  synthetic_session.jsonl
fixtures/demo/: build_demo.py
housebroken/: __init__.py  __main__.py  anchor.py  applicability.py  cli.py  demo.py  discover.py  redact.py  report.py  score.py  transcript.py
housebroken/check/: __init__.py  detect.py  judge.py  output_format.py  sequence.py
housebroken/demo_fixtures/: rules.md  session.jsonl
housebroken/rules/: __init__.py  classify.py  parse.py
scripts/: stranger_test.sh
tests/: corpus.py  run_tests.py  test_anchor.py  test_applicability.py  test_classify.py  test_degradation.py  test_demo.py  test_detect.py  test_judge.py  test_output_format.py  test_redact.py  test_rules_parse.py  test_score_report.py  test_sequence.py  test_transcript.py
