[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "housebroken"
version = "0.1.1"
description = "Grade your AI agent against your own CLAUDE.md, with receipts."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Turni Saha" }]
keywords = ["claude", "claude-code", "agent", "rules", "linter", "transcripts"]
classifiers = [
    "Programming Language :: Python :: 3 :: Only",
    "License :: OSI Approved :: MIT License",
    "Environment :: Console",
]
# STDLIB-ONLY: zero runtime dependencies is a hard product constraint.
dependencies = []

[project.scripts]
housebroken = "housebroken.cli:main"

[tool.hatch.build.targets.wheel]
# demo_fixtures/*.md and *.jsonl live inside the package, so hatchling ships
# them in the wheel automatically — that is what makes `housebroken demo` work
# from an installed wheel.
packages = ["housebroken"]
